tests/errors/test_56.x
// Dot access impermissible on non variables

struct IntBox -> {
    a: int
}

fn main() -> int {
    let b = IntBox.c;

    return 0;
}